err/bg.crawler.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/bg'...
Listing './lib/python3.5/site-packages/bg/crawler'...
Compiling './lib/python3.5/site-packages/bg/crawler/crawler.py'...
***   File "./lib/python3.5/site-packages/bg/crawler/crawler.py", line 167
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bg.crawler-0.2.6.egg-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_magic-0.4.15.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sunburnt'...
Compiling './lib/python3.5/site-packages/sunburnt/dates.py'...
***   File "./lib/python3.5/site-packages/sunburnt/dates.py", line 84
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sunburnt/schema.py'...
***   File "./lib/python3.5/site-packages/sunburnt/schema.py", line 38
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sunburnt/search.py'...
***   File "./lib/python3.5/site-packages/sunburnt/search.py", line 46
    print '%s%s (%s)' % (indentspace, repr(self), "Normalized" if self.normalized else "Not normalized")
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sunburnt/test_schema.py'...
***   File "./lib/python3.5/site-packages/sunburnt/test_schema.py", line 19
    [datetime.datetime(2009, 07, 23, 3, 24, 34, 376),
                              ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/sunburnt/test_search.py'...
***   File "./lib/python3.5/site-packages/sunburnt/test_search.py", line 230
    print p
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sunburnt-0.6.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
